--- a/test.html
+++ b/test.html
@@ -98,7 +98,7 @@
             padding: 10px; /* Padding for better appearance */
             margin-bottom: 10px; /* Space between fields */
             border: none; /* Remove border */
-            border-bottom: 1px solid purple; /* Add a bottom border to simulate a single line */
+            border-bottom: 1px solid Black; /* Add a bottom border to simulate a single line */
             background: transparent; /* Transparent background */
             box-shadow: none; /* Remove any box-shadow */
             outline: none; /* Remove the outline on focus */
